Upgrade codebase to Java 21